--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     image: eclipse-mosquitto:2.0
     container_name: mqtt-broker
     ports:
-      - "1883:1883"  # Removido 127.0.0.1 para acesso entre containers
+      - "1883:1883"  # acesso entre containers
       - "9001:9001"
     volumes:
       - ./config:/mosquitto/config:ro
@@ -35,13 +35,13 @@ services:
       - mosquitto_log:/mosquitto/log
 
   mqtt-subscriber:
-  build: .
-  container_name: mqtt-subscriber
-  command: python mqtt_subscriber.py
-  environment:
-    - MQTT_BROKER_HOST=mqtt-broker
-  depends_on:
-    - mqtt-broker
+    build: .
+    container_name: mqtt-subscriber
+    command: python mqtt_subscriber.py
+    environment:
+      - MQTT_BROKER_HOST=mqtt-broker
+    depends_on:
+      - mqtt-broker
 
   postgres-twin:
     image: postgres:15
